@@ -219,5 +219,3 @@ max_queue_files 250
 # Use the XML file last modification time as timestamp.
 # use_xml_timestamp 1
 
-# Inhibit agent alerts if the parent has fired a critical alert.
-# inhibit_alerts 1
